Overflow Fix
Horizontal Overflow Fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -466,7 +466,7 @@ section{
 #work{
   position: absolute;
   top: 100vh;
-  width: 100vw;
+  width: 100%;
   padding-top: 7%;
 }
 .project .insideText{
@@ -527,7 +527,7 @@ section{
 
 #footer{
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   text-align: center;
 }
